// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`show display in progres when movie is been fetching 1`] = `
<div>
  Loading...
</div>
`;

exports[`show error when movie fetch has failed 1`] = `
<div>
  Error...
</div>
`;

exports[`show movie list when fetching movies 1`] = `
<div
  className="movie-list-container"
>
  <a
    className="movie-item"
    href="/movies/Kabali"
    onClick={[Function]}
  >
    <img
      alt="Kabali"
      className="movie-thumbnail"
      src="https://s3.ap-south-1.amazonaws.com/twspicinemas/poster/Kabali.jpg"
    />
    <h5
      className="name"
    >
      Kabali
    </h5>
    <p
      className="experiences"
    >
      RDX, Dolby Atmos, SUB
    </p>
  </a>
  <a
    className="movie-item"
    href="/movies/Sultan"
    onClick={[Function]}
  >
    <img
      alt="Sultan"
      className="movie-thumbnail"
      src="https://s3.ap-south-1.amazonaws.com/twspicinemas/poster/Sultan.jpg"
    />
    <h5
      className="name"
    >
      Sultan
    </h5>
    <p
      className="experiences"
    >
      RDX, Dolby Atmos, SUB
    </p>
  </a>
  <a
    className="movie-item"
    href="/movies/Sultan"
    onClick={[Function]}
  >
    <img
      alt="Banjo"
      className="movie-thumbnail"
      src="https://s3.ap-south-1.amazonaws.com/twspicinemas/poster/Sultan.jpg"
    />
    <h5
      className="name"
    >
      Banjo
    </h5>
    <p
      className="experiences"
    >
      RDX 3D
    </p>
  </a>
  <a
    className="movie-item"
    href="/movies/Suicide-Squad"
    onClick={[Function]}
  >
    <img
      alt="Suicide Squad"
      className="movie-thumbnail"
      src="https://s3.ap-south-1.amazonaws.com/twspicinemas/poster/Suicide-Squad.jpg"
    />
    <h5
      className="name"
    >
      Suicide Squad
    </h5>
    <p
      className="experiences"
    >
      Dolby Atmos, RDX 3D, SUB
    </p>
  </a>
  <a
    className="movie-item"
    href="/movies/Namadhu"
    onClick={[Function]}
  >
    <img
      alt="Namadhu"
      className="movie-thumbnail"
      src="https://s3.ap-south-1.amazonaws.com/twspicinemas/poster/Namadhu.jpg"
    />
    <h5
      className="name"
    >
      Namadhu
    </h5>
    <p
      className="experiences"
    >
      RDX, SUB
    </p>
  </a>
  <a
    className="movie-item"
    href="/movies/Pelli0-Chupulu"
    onClick={[Function]}
  >
    <img
      alt="Pelli Chupulu"
      className="movie-thumbnail"
      src="https://s3.ap-south-1.amazonaws.com/twspicinemas/poster/Pelli0-Chupulu.jpg"
    />
    <h5
      className="name"
    >
      Pelli Chupulu
    </h5>
    <p
      className="experiences"
    >
      RDX, SUB
    </p>
  </a>
  <a
    className="movie-item"
    href="/movies/Pink"
    onClick={[Function]}
  >
    <img
      alt="Pink"
      className="movie-thumbnail"
      src="https://s3.ap-south-1.amazonaws.com/twspicinemas/poster/Pink.jpg"
    />
    <h5
      className="name"
    >
      Pink
    </h5>
    <p
      className="experiences"
    >
      RDX, SUB
    </p>
  </a>
  <a
    className="movie-item"
    href="/movies/Remo"
    onClick={[Function]}
  >
    <img
      alt="Remo"
      className="movie-thumbnail"
      src="https://s3.ap-south-1.amazonaws.com/twspicinemas/poster/Remo.jpg"
    />
    <h5
      className="name"
    >
      Remo
    </h5>
    <p
      className="experiences"
    >
      Dolby Atmos, RDX, SUB
    </p>
  </a>
  <a
    className="movie-item"
    href="/movies/Inferno"
    onClick={[Function]}
  >
    <img
      alt="Inferno"
      className="movie-thumbnail"
      src="https://s3.ap-south-1.amazonaws.com/twspicinemas/poster/Inferno.jpg"
    />
    <h5
      className="name"
    >
      Inferno
    </h5>
    <p
      className="experiences"
    >
      Dolby Atmos, RDX, SUB
    </p>
  </a>
</div>
`;
